--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tabler/icons-react": "^3.10.0",
+    "@tabler/icons-react": "^3.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
     "geist": "^1.3.0",
+    "geoip-lite": "^1.4.10",
     "lucide-react": "^0.407.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.4",
@@ -41,8 +42,11 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.52.1",
+    "react-sortablejs": "^6.1.4",
     "react-staggered-grid": "^1.0.18",
+    "sortablejs": "^1.15.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
@@ -53,6 +57,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sortablejs": "^1.15.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
