--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^3.11.0",
+    "@types/ua-parser-js": "^0.7.39",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^11.2.14",
     "geist": "^1.3.0",
     "geoip-lite": "^1.4.10",
-    "lucide-react": "^0.407.0",
+    "lucide-react": "^0.414.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.19",
@@ -49,10 +51,12 @@
     "react-hook-form": "^7.52.1",
     "react-sortablejs": "^6.1.4",
     "react-staggered-grid": "^1.0.18",
+    "recharts": "^2.12.7",
     "sortablejs": "^1.15.2",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^1.0.38",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
