--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
+    "eslint": "^9.8.0",
     "framer-motion": "^11.2.14",
     "geist": "^1.3.0",
     "geoip-lite": "^1.4.10",
