--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -41,6 +42,7 @@
     "framer-motion": "^11.2.14",
     "geist": "^1.3.0",
     "geoip-lite": "^1.4.10",
+    "lite-youtube-embed": "^0.3.2",
     "lucide-react": "^0.414.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.4",
@@ -51,6 +53,7 @@
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.52.1",
     "react-sortablejs": "^6.1.4",
+    "react-spotify-embed": "^2.0.4",
     "react-staggered-grid": "^1.0.18",
     "recharts": "^2.12.7",
     "sortablejs": "^1.15.2",
