--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
@@ -57,6 +58,7 @@
     "react-staggered-grid": "^1.0.18",
     "recharts": "^2.12.7",
     "sortablejs": "^1.15.2",
+    "spotify-url-info": "^3.2.16",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
