--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,4 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
-
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="postgresql://postgres:password@localhost:5432/tielinks"
+DATABASE_URL="postgresql://postgres:hellofaizan@localhost:5432/tielinks"
 
 # Next Auth
 # You can generate a new secret on the command line with:
@@ -19,7 +6,16 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/tielinks"
 # https://next-auth.js.org/configuration/options#secret
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_Website_URL="http://localhost:3000"
+NEXTAUTH_SECRET="b1b2b3b4b5b6b7b8b9b0"
+NODE_ENV="development"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+DISCORD_CLIENT_ID="id"
+DISCORD_CLIENT_SECRET="secret"
+GITHUB_CLIENT_ID="id"
+GITHUB_CLIENT_SECRET="secret"
+GOOGLE_CLIENT_ID="id"
+GOOGLE_CLIENT_SECRET="secret"
+
+NEXT_PUBLIC_TENOR_API_KEY="key"
