--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "geist": "^1.3.0",
     "geoip-lite": "^1.4.10",
     "lite-youtube-embed": "^0.3.2",
-    "lucide-react": "^0.414.0",
+    "lucide-react": "^0.438.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.19",
@@ -58,10 +58,11 @@
     "react-spotify-embed": "^2.0.4",
     "react-staggered-grid": "^1.0.18",
     "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
     "sortablejs": "^1.15.2",
     "spotify-url-info": "^3.2.16",
     "tailwind-gradient-mask-image": "^1.2.0",
-    "tailwind-merge": "^2.4.0",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.38",
     "vaul": "^0.9.1",
